# wolf3d-multiport

./: .gitignore  compare_frames.py  conf.lua  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: capture_typescript.mjs
src/c-sdl3-port/: C0.ASM  CMakeLists.txt  CONTIGSC.C  DETECT.C  H_LDIV.ASM  ID_CA.C  ID_CA.H  ID_HEAD.H  ID_HEADS.H  ID_IN.C  ID_IN.H  ID_MM.C  ID_MM.H  ID_PM.C  ID_PM.H  ID_SD.C  ID_SD.H  ID_SD_A.ASM  ID_US_1.C  ID_US_A.C  ID_VH.C  ID_VH.H  ID_VH_A.C  ID_VL.C  ID_VL.H  ID_VL_A.C  JABHACK.ASM  MUNGE.C  OLDSCALE.C  WHACK_A.ASM  WL_ACT1.C  WL_ACT2.C  WL_AGENT.C  WL_ASM.C  WL_DEBUG.C  WL_DEF.H  WL_DRAW.C  WL_DR_A.C  WL_GAME.C  WL_INTER.C  (+9 more)
src/csharp-sdl3-port/: IdCa.cs  IdIn.cs  IdMm.cs  IdPm.cs  IdSd.cs  IdUs.cs  IdVh.cs  IdVl.cs  SDL3.cs  WlAct1.cs  WlAct2.cs  WlAgent.cs  WlDebug.cs  WlDef.cs  WlDraw.cs  WlGame.cs  WlInter.cs  WlMain.cs  WlMenu.cs  WlPlay.cs  WlScale.cs  WlState.cs  WlText.cs  Wolf3D.csproj
src/html/: index.html  spec_HEADERS.html  spec_ID_CA.html  spec_ID_IN.html  spec_ID_MM.html  spec_ID_PM.html  spec_ID_SD.html  spec_ID_US.html  spec_ID_VH.html  spec_ID_VL.html  spec_WL_ACT1.html  spec_WL_ACT2.html  spec_WL_AGENT.html  spec_WL_DEBUG.html  spec_WL_DEF.html  spec_WL_DRAW.html  spec_WL_GAME.html  spec_WL_INTER.html  spec_WL_MAIN.html  spec_WL_MENU.html  spec_WL_PLAY.html  spec_WL_SCALE.html  spec_WL_STATE.html  spec_WL_TEXT.html  style.css
src/love2d-port/: audiowl6.lua  conf.lua  foreign.lua  gfxv_wl6.lua  id_ca.lua  id_in.lua  id_mm.lua  id_pm.lua  id_sd.lua  id_us.lua  id_vh.lua  id_vl.lua  main.lua  wl_act1.lua  wl_act2.lua  wl_agent.lua  wl_debug.lua  wl_def.lua  wl_draw.lua  wl_game.lua  wl_inter.lua  wl_main.lua  wl_menu.lua  wl_play.lua  wl_scale.lua  wl_state.lua  wl_text.lua
src/typescript-port/: audiowl1.ts  audiowl6.ts  gamepal.ts  gfxv_wl1.ts  gfxv_wl6.ts  id_ca.ts  id_in.ts  id_mm.ts  id_pm.ts  id_sd.ts  id_us_1.ts  id_vh.ts  id_vl.ts  main.ts  mapswl6.ts  wl_act1.ts  wl_act2.ts  wl_agent.ts  wl_debug.ts  wl_def.ts  wl_draw.ts  wl_game.ts  wl_inter.ts  wl_main.ts  wl_menu.ts  wl_play.ts  wl_scale.ts  wl_state.ts  wl_text.ts
